--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Changes for Perl extension Test-NoWarnings
 
+    - clarify docs around tests without a plan
+    - documentation cleanups and typo fixes
+    - minor code cleanups
+    - use warnings in tests
+    - skip fork test if perl can't fork
+    - note conflicts with Carp::Always in documentation
     - Made had_no_warnings turn off the checking at END time for use with
       done_testing based tests with no test count. Also added docs.
 
