--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Changes for Perl extension Test-NoWarnings
 
+    - released as stable
+
 1.05_01 - 2021-07-15
     - clarify docs around tests without a plan
     - documentation cleanups and typo fixes
